--- a/index.html
+++ b/index.html
@@ -33,6 +33,50 @@
           <p class="addres__link addres__location">наб. Принсенграхт 263-265, Амстердам</p>
         </address>
       </header>
+
+      <main class="main">
+        <!-- <section class="cover">
+          <div class="cover__overlay">
+            <h1 class="cover__title">
+              <span class="cover__title-first-word">Оно</span>
+              <span class="cover__title-two-word">тебе</span>
+              <span class="cover__title-three-word">надо</span>
+            </h1>
+          </div>
+        </section> -->
+
+        <section class="lots">
+          <h2 class="lots__heading">
+            Лоты
+          </h2>
+          <ul class="lots__card-list">
+            <li class="lots__card-list-item card_type_film">
+              <div class="overlay"></div>
+              <h3 class="card__title">
+                <a class="card-link" href="#">Фильм режиссёра, который  бросил киношколу</a>
+              </h3>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+            </li>
+            <li class="lots__card-list-item card_type_book">
+              <div class="overlay"></div>
+              <h3 class="card__title">
+                <a class="card-link" href="#">Книга, где описан один скучный день из жизни рекламного агента</a>
+              </h3>
+              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+            </li>
+            <li class="lots__card-list-item card_type_picture">
+              <div class="overlay"></div>
+              <h3 class="card__title">
+                <a class="card-link" href="#">Картина, которую повторит даже 5-летний сын маминой подруги</a>
+              </h3>
+              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+            </li>
+          </ul>
+          <a href="#" class="lots__look-more-link">
+            посмотреть больше
+          </a>
+        </section>
+      </main>
     </div>
   </body>
 </html>
