--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
               <a class="header__link" href="#">главная</a>
             </li>
             <li class="header__links-list-item">
-              <a class="header__link header_link_active" href="#">посмотреть лоты</a>
+              <a class="header__link link_active" href="#">посмотреть лоты</a>
             </li>
             <li class="header__links-list-item">
-              <a class="header__link header_link_active" href="#">об аукционе</a>
+              <a class="header__link link_active" href="#">об аукционе</a>
             </li>
           </ul>
         </nav>
@@ -76,6 +76,62 @@
             посмотреть больше
           </a>
         </section>
+        <section class="about">
+          <article class="about__column">
+            <div class="about__logo">
+              <img class="about__logo-image" src="images/logo-white.svg" alt="Беллый логотип">
+            </div>
+          </article>
+          <article class="about__column-text">
+            <h3 class="about__title">Об аукционе</h3>
+            <ul class="about__text-list">
+              <li class="about__text-list-item">
+                <p class="about__text">Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не&nbsp;должны были попасть ни&nbsp;на&nbsp;один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+              </li>
+              <li class="about__text-list-item">
+                <p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В&nbsp;пух и&nbsp;прах растерзанные критиками. Непринятые и&nbsp;непонятые. Когда-то они казались просто неудачными. Но, несмотря на&nbsp;критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в&nbsp;эти вещи не&nbsp;верил никто, продолжали верить их&nbsp;создатели. И&nbsp;сейчас эти лоты стали культовыми.</p>
+              </li>
+            </ul>
+          </article>
+        </section>
+
+        <footer class="footer">
+          <address class="address">
+            <a class="addres__link" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+            <a class="addres__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <p class="addres__link addres__location">наб. Принсенграхт 263-265, Амстердам</p>
+          </address>
+          <nav class="footer__menu">
+            <ul class="footer__menu-list">
+              <li class="footer__menu-list-item">
+                <a class="footer__menu-link" href="#">главная</a>
+              </li>
+              <li class="footer__menu-list-item">
+                <a class="footer__menu-link link_active" href="#">посмотреть лоты</a>
+              </li>
+              <li class="footer__menu-list-item">
+                <a class="footer__menu-link link_active" href="#">об аукционе</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="footer__social-list">
+            <li class="footer__social-list-item">
+              <a class="footer__social-link" href="#">
+                <img class="footer__social-icon" src="images/yt.svg" alt="YouTube">
+              </a>
+            </li>
+            <li class="footer__social-list-item">
+              <a class="footer__social-link" href="#">
+                <img class="footer__social-icon" src="images/vk.svg" alt="Вконтакте">
+              </a>
+            </li>
+            <li class="footer__social-list-item">
+              <a class="footer__social-link" href="#">
+                <img class="footer__social-icon" src="images/pinterest.svg" alt="Pinterest">
+              </a>
+            </li>
+          </ul>
+        </footer>
       </main>
     </div>
   </body>
