Испрвил все замечания, не исправил только коментарий"Можно лучше" оставил свой коментарий в коде

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item header__links_no-circle">
+          <li class="header__links-list-item header__links_no-bullit">
             <a class="header__link" href="#">главная</a>
           </li>
           <li class="header__links-list-item">
@@ -40,12 +40,12 @@
         <div class="overlay"></div>
           <h1 class="cover__title">
             <span class="aligned-text letter-spacing-for-all">о<span class="letter-spacing-extended">но</span></span>
-            <span class="aligned-text_center letter-spacing-for-all">те<span class="letter-spacing-extended">бе</span></span>
-            <span class="aligned-text_right letter-spacing-extended">н<span class="letter-spacing-for-all">ад</span><span class="no-letter-spacing">о</span></span>
+            <span class="aligned-text aligned-text_center letter-spacing-for-all">те<span class="letter-spacing-extended">бе</span></span>
+            <span class="aligned-text aligned-text_right letter-spacing-extended">н<span class="letter-spacing-for-all">ад</span><span class="no-letter-spacing">о</span></span>
           </h1>
           <div class="cover__description">
             <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-            <button class="bet-button" type="submit">Сделать ставку</button>
+            <button class="bet-button" type="button">Сделать ставку</button>
           </div>
           
       </section>
@@ -88,7 +88,7 @@
           </div>
         </div>
         <article class="about__column-text" aria-label="Об аукционе">
-          <h3 class="about__title">Об аукционе</h3>
+          <h2 class="about__title">Об аукционе</h2>
             <div class="about__text">
               <p class="about__paragraph">Здесь вы&nbsp;не&nbsp;встретите очередное пафосное собрание невероятно дорогого
                 антиквариата. Наши лоты вообще не&nbsp;должны были попасть ни&nbsp;на&nbsp;один аукцион. Потому что кому
